cloudshop-networking-k8s/manifests/network-policies/deny-all.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-all
  namespace: cloudshop-secure
spec:
  podSelector: {}
  policyTypes:
  - Ingress
